<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginActivity">

    <ImageView
        android:id="@+id/ivLogin"
        android:layout_width="350dp"
        android:layout_height="280dp"
        android:src="@drawable/login_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/image" />

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_login"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="60dp"
        android:layout_marginStart="20dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/ivLogin"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/start_end_margin"
        android:layout_marginEnd="@dimen/start_end_margin"
        android:layout_marginTop="15dp"
        app:boxStrokeWidth="2dp"
        app:boxCornerRadiusBottomEnd="@dimen/til_radius"
        app:boxCornerRadiusBottomStart="@dimen/til_radius"
        app:boxCornerRadiusTopEnd="@dimen/til_radius"
        app:boxCornerRadiusTopStart="@dimen/til_radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLogin"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <EditText
            android:id="@+id/etLoginEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:drawableStart="@drawable/outline_email"
            android:drawablePadding="8dp"
            android:hint="@string/prompt_email"
            android:textSize="@dimen/et_text_size" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/start_end_margin"
        android:layout_marginEnd="@dimen/start_end_margin"
        android:layout_marginTop="10dp"
        app:boxStrokeWidth="2dp"
        app:passwordToggleEnabled="true"
        app:boxCornerRadiusBottomEnd="@dimen/til_radius"
        app:boxCornerRadiusBottomStart="@dimen/til_radius"
        app:boxCornerRadiusTopEnd="@dimen/til_radius"
        app:boxCornerRadiusTopStart="@dimen/til_radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilEmail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <EditText
            android:id="@+id/etSinInPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:drawableStart="@drawable/outline_lock"
            android:drawablePadding="8dp"
            android:hint="@string/prompt_password"
            android:textSize="@dimen/et_text_size" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tilPassword"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:text="@string/forgot_password"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/blue_4" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvForgotPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/button_bg"
        android:text="@string/log_in"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textAllCaps="false"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/llRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/btnLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tvNewHere"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/blue_5" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvTnC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/tnc_msg"
        android:textSize="15sp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/llRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>