<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainSignupView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_light_background"
    tools:context="ui.SignupActivity">

    <ImageView
        android:id="@+id/ivSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/image"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/login_bg" />

    <TextView
        android:id="@+id/tvSignupAppHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_header_title"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivSignup" />

    <TextView
        android:id="@+id/tvSignupAppSubheader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/app_sub_header_title"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSignupAppHeader" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".45" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView_createAccount"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelineSignup"
        app:cardBackgroundColor="@color/white"
        app:cardPreventCornerOverlap="true"
        style="@style/custom_card_view_style">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvCreateAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="Create an Account"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilSignupEmail"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/start_end_margin"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="@dimen/start_end_margin"
                app:boxCornerRadiusBottomEnd="@dimen/til_radius"
                app:boxCornerRadiusBottomStart="@dimen/til_radius"
                app:boxCornerRadiusTopEnd="@dimen/til_radius"
                app:boxCornerRadiusTopStart="@dimen/til_radius"
                app:boxStrokeWidth="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvCreateAccount">

                <EditText
                    android:id="@+id/etSignupEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/outline_email"
                    android:drawablePadding="8dp"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:textSize="@dimen/et_text_size" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilSignupPassword"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/start_end_margin"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="@dimen/start_end_margin"
                app:boxCornerRadiusBottomEnd="@dimen/til_radius"
                app:boxCornerRadiusBottomStart="@dimen/til_radius"
                app:boxCornerRadiusTopEnd="@dimen/til_radius"
                app:boxCornerRadiusTopStart="@dimen/til_radius"
                app:boxStrokeWidth="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tilSignupEmail"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/etSignupPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/outline_lock"
                    android:drawablePadding="8dp"
                    android:hint="Enter password"
                    android:inputType="textPassword"
                    android:textSize="@dimen/et_text_size" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilConfirmPassword"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/start_end_margin"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="@dimen/start_end_margin"
                app:boxCornerRadiusBottomEnd="@dimen/til_radius"
                app:boxCornerRadiusBottomStart="@dimen/til_radius"
                app:boxCornerRadiusTopEnd="@dimen/til_radius"
                app:boxCornerRadiusTopStart="@dimen/til_radius"
                app:boxStrokeWidth="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tilSignupPassword">

                <EditText
                    android:id="@+id/etConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/outline_lock"
                    android:drawablePadding="8dp"
                    android:hint="Confirm password"
                    android:inputType="textPassword"
                    android:textSize="@dimen/et_text_size" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/button_bg"
                android:text="Register"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tilConfirmPassword" />

            <LinearLayout
                android:id="@+id/llLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnRegister">

                <TextView
                    android:id="@+id/tvAlreadyUser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Already an user? "
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tvLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Login"
                    android:textColor="#123d5f"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>